# pablo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .semgrepignore  .trivyignore  CLA.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.firebase  Makefile  README.md  SECURITY.md  docker-compose.yml  firebase.json  firestore.rules  min_client_versions.json  pyproject.toml  rebuild-base.sh  redeploy.sh  run.sh  setup-solo.sh  storage.rules
.claude/skills/audit-coverage-check/: SKILL.md  check.py
.claude/skills/migration-lint/: SKILL.md  check.py
.claude/skills/pentest/: SKILL.md
.claude/skills/phi-log-scan/: SKILL.md  check.py
.claude/skills/slop-sweep/: SKILL.md  check.py
.gemini/skills/pentest/: SKILL.md
.github/: dependabot.yml
.github/workflows/: base-image-bump.yml  ci.yml  codeql.yml  deploy.yml  mirror-base-images.yml  publish-base-image.yml  release.yml  security.yml  sync-oss.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.pentest  Dockerfile.production  Makefile  alembic.ini  cloudbuild-base.yaml  cloudbuild.yaml  entrypoint.py  firestore.indexes.json
backend/alembic/: env.py
backend/alembic/versions/: a1f4e2c9b7d8_add_audit_logs_table.py  a7b3e5f2c8d1_note_types_v1_add_note_type_rename_jsonb.py  b523a68b7137_seed_pentest_auto_allowlist.py  b9d2f7c4e3a8_create_notes_table.py  c7f3e1a4b9d2_remove_pentest_auto_allowlist.py  c8a9d3e4f206_drop_note_cols_from_therapy_sessions.py  d20c4753ded3_initial_practice_schema.py  d4f8a1c92e35_soft_delete_columns.py  d7a3f1c8e2b4_practices_retention_offboard_columns.py  e5b91c34a72f_chart_closure_columns.py  e8f2a9c1b043_grant_pablo_select_audit_logs.py  e9b4f2a1c805_compliance_items_table.py  f1c8d4a92b65_platform_audit_and_pentest_flag.py  f3a59d308889_noop_models_comment_docs_only.py
backend/app/: __init__.py  api_errors.py  background_sync.py  database.py  main.py  middleware.py  rate_limit.py  redis_client.py  request_context.py  settings.py  utcnow.py  version_check.py
backend/app/auth/: __init__.py  firebase_init.py  iap.py  service.py
backend/app/compliance/: __init__.py  templates.py
backend/app/data/: practice_topics.json
backend/app/db/: __init__.py  middleware.py  migrate_tenants.py  models.py  platform_models.py  provisioning.py
backend/app/jobs/: __init__.py  audit_retention_cron.py  hard_purge_cron.py  hard_purge_retention_stub.py  hipaa_attestation.py  hipaa_log_review.py  pentest_collectors.py  pentest_identity.py  pentest_runner.py  pentest_tenant.py  pipeline_heartbeat.py
backend/app/models/: __init__.py  audit.py  ehr_prompt.py  ehr_route.py  enums.py  note.py  notes.py  patient.py  platform_audit.py  practice.py  scheduling.py  session.py  soap_note.py  transcript.py  user.py  validators.py
backend/app/notes/: __init__.py  authorizer.py  builtin.py  registry.py
backend/app/repositories/: __init__.py  allowlist.py  appointment.py  audit.py  availability_rule.py  ehr_prompt.py  ehr_route.py  google_calendar_token.py  ical_client_mapping.py  ical_sync_config.py  note.py  patient.py  platform_audit.py  session.py  user.py
backend/app/routes/: __init__.py  admin.py  admin_pentest.py  auth.py  compliance.py  ehr_routes.py  ext_auth.py  ical_sync.py  internal.py  note_types.py  notes.py  patients.py  practice.py  scheduling.py  sessions.py  users.py
backend/app/scheduling_engine/: __init__.py  exceptions.py
backend/app/services/: __init__.py  assemblyai_transcription_service.py  audit_review_service.py  audit_service.py  auth_code_store.py  bm25_service.py  cloud_tasks_service.py  nli_service.py  (+26 more)
backend/tests/: __init__.py  conftest.py  test_admin_pentest_routes.py  test_admin_routes.py  test_admin_tenant_routes.py  test_audit_repo.py  test_audit_retention_cron.py  test_audit_review_service.py  test_audit_service.py  test_auth.py  test_auth_code_store.py  test_auth_routes.py  test_availability_engine.py  test_baa_path_traversal.py  test_bm25_service.py  test_closed_loop_audit.py  test_cloud_sql_probe.py  test_ehr_routes_api.py  test_elevenlabs_tts_service.py  test_embedding_service.py  test_entity_naturalizer.py  test_eval_export_service.py  test_export_service.py  test_ext_auth.py  test_finalize_integration.py  test_google_calendar.py  test_hard_purge_cron.py  test_hipaa_attestation.py  test_hipaa_log_review.py  test_hybrid_pipeline_integration.py  test_ical_sync.py  test_middleware.py  test_migrate_tenants.py  test_nli_service.py  test_note_generation_service.py  test_note_service.py  test_note_type_authorizer.py  test_note_types_api.py  test_notes_registry.py  test_notes_repository.py  (+32 more)
backend/tests_integration/: README.md  conftest.py
docs/: GCP_DEPLOYMENT.md  HIPAA_AUDIT_LOGS.md  HIPAA_SECURITY.md  SELF_HOSTING_HIPAA_GUIDE.md  TECHNICAL_ARCHITECTURE.md  practice-mode-api.md
docs/compliance/: baa-manifest.yaml  hipaa-security-rule.md  pentest-identity-sa.md
docs/internal/: saas-dispatch.md
docs/pentest/: 2026-04-16_pentest_report.md  2026-04-23_pentest_report.md  2026-04-30_pentest_report.md  2026-05-03_pentest_report.md  HIPAA_PENTEST_GUIDE.md  LLM_PENTEST_DESIGN.md  PENTEST_COVERAGE_GAPS.md  VULNERABILITY_EXCEPTIONS.md
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.production  README.md  cloudbuild.yaml  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
frontend/app/: calendar-theme.css  error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/e2e/: patients.spec.ts
functions/: package-lock.json  package.json  tsconfig.json
functions/lib/: index.js  index.js.map
functions/src/: index.ts
scripts/: bootstrap-admin.sh  check-version-sync.sh  check_audit_params.py  setup-redis.sh  setup-transcription-infra.sh  setup-transcription-queue.sh
scripts/monitoring/: README.md  setup.sh
scripts/pentest/: run-local.sh
scripts/routines/: auto-updater-opt-in.sh
services/transcription/: Dockerfile  config.py  main.py  requirements.txt  worker.py
(+230 files in other folders)
